--- a/grid.scss
+++ b/grid.scss
@@ -34,19 +34,89 @@ $lg: 75em;
         width: 71rem;
     }
 }
+@mixin flex-col {
+    box-sizing: border-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    -webkit-box-flex: 0;
+    flex: 0 1 auto;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    @media only screen and (min-width: $sm) {
+        width: 46rem;
+    }
+    @media only screen and (min-width: $md) {
+        width: 62rem;
+    }
+    @media only screen and (min-width: $lg) {
+        width: 71rem;
+    }
+}
 @mixin flex-row-reverse {
+    box-sizing: border-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    -webkit-box-flex: 0;
+    flex: 0 1 auto;
     -webkit-flex-direction: row-reverse;
     -ms-flex-direction: row-reverse;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: reverse;
     flex-direction: row-reverse;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    @media only screen and (min-width: $sm) {
+        width: 46rem;
+    }
+    @media only screen and (min-width: $md) {
+        width: 62rem;
+    }
+    @media only screen and (min-width: $lg) {
+        width: 71rem;
+    }
 }
 @mixin flex-col-reverse {
+    box-sizing: border-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    -webkit-box-flex: 0;
+    flex: 0 1 auto;
     -webkit-flex-direction: column-reverse;
     -ms-flex-direction: column-reverse;
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
     flex-direction: column-reverse;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    @media only screen and (min-width: $sm) {
+        width: 46rem;
+    }
+    @media only screen and (min-width: $md) {
+        width: 62rem;
+    }
+    @media only screen and (min-width: $lg) {
+        width: 71rem;
+    }
 }
 // Function to calculate the width of a cell
 $target: null;
