--- a/output_css.css
+++ b/output_css.css
@@ -34,42 +34,134 @@ header {
   max-width: 100%;
   padding-right: 1rem;
   padding-left: 1rem; }
+  @media only screen and (min-width: 62em) {
+    header {
+      -webkit-order: 1;
+      -ms-flex-order: 1;
+      -webkit-box-order: 1;
+      order: 1; } }
 
 aside.firstAside {
   box-sizing: border-box;
-  -ms-flex-preferred-size: 50%;
-  -webkit-flex-basis: 50%;
-  flex-basis: 50%;
-  max-width: 50%;
+  -ms-flex-preferred-size: 100%;
+  -webkit-flex-basis: 100%;
+  flex-basis: 100%;
+  max-width: 100%;
   padding-right: 1rem;
   padding-left: 1rem; }
   @media only screen and (min-width: 48em) {
     aside.firstAside {
       box-sizing: border-box;
-      -ms-flex-preferred-size: 100%;
-      -webkit-flex-basis: 100%;
-      flex-basis: 100%;
-      max-width: 100%;
+      -ms-flex-preferred-size: 50%;
+      -webkit-flex-basis: 50%;
+      flex-basis: 50%;
+      max-width: 50%;
       padding-right: 1rem;
       padding-left: 1rem; } }
+  @media only screen and (min-width: 62em) {
+    aside.firstAside {
+      box-sizing: border-box;
+      -ms-flex-preferred-size: 25%;
+      -webkit-flex-basis: 25%;
+      flex-basis: 25%;
+      max-width: 25%;
+      padding-right: 1rem;
+      padding-left: 1rem;
+      -webkit-order: 2;
+      -ms-flex-order: 2;
+      -webkit-box-order: 2;
+      order: 2;
+      box-sizing: border-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: -webkit-box;
+      display: flex;
+      -webkit-flex: 0 1 auto;
+      -ms-flex: 0 1 auto;
+      -webkit-box-flex: 0;
+      flex: 0 1 auto;
+      -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      flex-direction: column;
+      -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+      -webkit-justify-content: center;
+      -ms-flex-pack: center;
+      -webkit-box-pack: center;
+      justify-content: center; } }
+  @media only screen and (min-width: 62em) and (min-width: 48em) {
+    aside.firstAside {
+      width: 46rem; } }
+  @media only screen and (min-width: 62em) and (min-width: 62em) {
+    aside.firstAside {
+      width: 62rem; } }
+  @media only screen and (min-width: 62em) and (min-width: 75em) {
+    aside.firstAside {
+      width: 71rem; } }
 
 aside.secondAside {
   box-sizing: border-box;
-  -ms-flex-preferred-size: 50%;
-  -webkit-flex-basis: 50%;
-  flex-basis: 50%;
-  max-width: 50%;
+  -ms-flex-preferred-size: 100%;
+  -webkit-flex-basis: 100%;
+  flex-basis: 100%;
+  max-width: 100%;
   padding-right: 1rem;
   padding-left: 1rem; }
   @media only screen and (min-width: 48em) {
     aside.secondAside {
       box-sizing: border-box;
-      -ms-flex-preferred-size: 100%;
-      -webkit-flex-basis: 100%;
-      flex-basis: 100%;
-      max-width: 100%;
+      -ms-flex-preferred-size: 50%;
+      -webkit-flex-basis: 50%;
+      flex-basis: 50%;
+      max-width: 50%;
       padding-right: 1rem;
       padding-left: 1rem; } }
+  @media only screen and (min-width: 62em) {
+    aside.secondAside {
+      box-sizing: border-box;
+      -ms-flex-preferred-size: 25%;
+      -webkit-flex-basis: 25%;
+      flex-basis: 25%;
+      max-width: 25%;
+      padding-right: 1rem;
+      padding-left: 1rem;
+      -webkit-order: 4;
+      -ms-flex-order: 4;
+      -webkit-box-order: 4;
+      order: 4;
+      box-sizing: border-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: -webkit-box;
+      display: flex;
+      -webkit-flex: 0 1 auto;
+      -ms-flex: 0 1 auto;
+      -webkit-box-flex: 0;
+      flex: 0 1 auto;
+      -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      flex-direction: column;
+      -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+      -webkit-justify-content: center;
+      -ms-flex-pack: center;
+      -webkit-box-pack: center;
+      justify-content: center; } }
+  @media only screen and (min-width: 62em) and (min-width: 48em) {
+    aside.secondAside {
+      width: 46rem; } }
+  @media only screen and (min-width: 62em) and (min-width: 62em) {
+    aside.secondAside {
+      width: 62rem; } }
+  @media only screen and (min-width: 62em) and (min-width: 75em) {
+    aside.secondAside {
+      width: 71rem; } }
 
 section.main {
   box-sizing: border-box;
@@ -79,6 +171,19 @@ section.main {
   max-width: 100%;
   padding-right: 1rem;
   padding-left: 1rem; }
+  @media only screen and (min-width: 62em) {
+    section.main {
+      box-sizing: border-box;
+      -ms-flex-preferred-size: 50%;
+      -webkit-flex-basis: 50%;
+      flex-basis: 50%;
+      max-width: 50%;
+      padding-right: 1rem;
+      padding-left: 1rem;
+      -webkit-order: 3;
+      -ms-flex-order: 3;
+      -webkit-box-order: 3;
+      order: 3; } }
 
 footer {
   box-sizing: border-box;
@@ -88,5 +193,11 @@ footer {
   max-width: 100%;
   padding-right: 1rem;
   padding-left: 1rem; }
+  @media only screen and (min-width: 62em) {
+    footer {
+      -webkit-order: 5;
+      -ms-flex-order: 5;
+      -webkit-box-order: 5;
+      order: 5; } }
 
 /*# sourceMappingURL=output_css.css.map */
